--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>A Multiplayer Game</title>
+    <title>Typing Speed Legends</title>
     <style>
       canvas {
         width: 800px;
